--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="css/animate.css" />
+
     <title>Gorban Transportation</title>
   </head>
 
@@ -75,91 +77,7 @@
     </header>
     <!-- header ends -->
 
-    <!-- slider starts -->
-    <a name="about"></a>
-    <div class="hero__container-slider">
-      <div class="slider__container">
-        <!-- <div
-          class="slider"
-          style="--width: 250px; --height: 205px; --quantity: 10"
-        >
-          <div class="slider__list">
-            <div class="slider__item" style="--position: 1">
-              <img src="/public/imgs/img4.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 2">
-              <img src="/public/imgs/img5.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 3">
-              <img src="/public/imgs/img6.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 4">
-              <img src="/public/imgs/img7.JPG" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 5">
-              <img src="/public/imgs/img8.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 6">
-              <img src="/public/imgs/img9.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 7">
-              <img src="/public/imgs/img10.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 8">
-              <img src="/public/imgs/img1.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 9">
-              <img src="/public/imgs/img2.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 10">
-              <img src="/public/imgs/img11.jpg" alt="" />
-            </div>
-          </div>
-        </div> -->
-
-        <div
-          class="slider"
-          reverse="true"
-          style="--width: 250px; --height: 230px; --quantity: 10"
-        >
-          <div class="slider__list">
-            <div class="slider__item" style="--position: 1">
-              <img src="/public/imgs/img10.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 2">
-              <img src="/public/imgs/img9.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 3">
-              <img src="/public/imgs/img8.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 4">
-              <img src="/public/imgs/img7.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 5">
-              <img src="/public/imgs/img6.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 6">
-              <img src="/public/imgs/img5.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 7">
-              <img src="/public/imgs/img4.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 8">
-              <img src="/public/imgs/img3.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 9">
-              <img src="/public/imgs/img2.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 10">
-              <img src="/public/imgs/img1.jpg" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- slider ends -->
-
-    <div class="hero__container">
+    <div class="hero__container wow">
       <!-- hero starts -->
       <section class="hero main-wrapper">
         <div class="hero__text">
@@ -213,16 +131,100 @@
       <!-- hero ends -->
     </div>
 
-    <div class="hero__logo">
+    <!-- slider starts -->
+    <!-- <a name="about"></a>
+    <div class="hero__container-slider wow">
+      <div class="slider__container">
+        <div
+          class="slider"
+          style="--width: 250px; --height: 205px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.JPG" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img11.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="slider"
+          reverse="true"
+          style="--width: 250px; --height: 230px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img3.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <!-- slider ends -->
+
+    <!-- <div class="hero__logo wow">
       <img class="header__logo" src="/logo.png" alt="Logo image" />
-    </div>
+    </div> -->
 
     <!-- about starts -->
     <a name="about"></a>
     <h3 class="section__title main-wrapper">About</h3>
 
-    <section class="about main-wrapper">
-      <div class="about__card">
+    <section class="about">
+      <div class="about__card wow">
         <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
@@ -250,7 +252,7 @@
         </div>
       </div>
 
-      <div class="about__card">
+      <div class="about__card wow">
         <img class="about__img" src="/public/imgs/img7.JPG" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
@@ -279,7 +281,7 @@
         </div>
       </div>
 
-      <div class="about__card">
+      <div class="about__card wow">
         <img class="about__img" src="/public/imgs/img3.jpg" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
@@ -345,7 +347,7 @@
     </div>
 
     <!-- gallery starts -->
-    <a name="gallery"></a>
+    <!-- <a name="gallery"></a>
     <div class="gallery main-wrapper">
       <a
         href="https://unsplash.it/1200/768.jpg?image=251"
@@ -408,7 +410,7 @@
           class="img-fluid custom-thumbnail"
         />
       </a>
-    </div>
+    </div> -->
     <!-- gallery ends -->
 
     <!-- contact starts -->
@@ -484,9 +486,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
+      integrity="sha512-Rf6oM/I7fgwjRVfP5OjsfOP8hPCjqFkENQuDS+mOZqq+Qf7F8TPRzOYOu3fs+I8F6h63TfBum7xEpJws2qPwtA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
+    <script>
+      new WOW().init();
+    </script>
+    <script type="module" src="./src/app.js"></script>
     <script type="module" src="./src/main.js"></script>
-    <script src="path/to/your/script.js?v=1.0"></script>
 
     <script>
       $(document).on("click", '[data-toggle="lightbox"]', function (event) {
