--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <div class="hero__container wow">
       <!-- hero starts -->
       <section class="hero main-wrapper">
+        <div class="hero__logo wow">
+          <img class="header__logo" src="/logo.png" alt="Logo image" />
+        </div>
         <div class="hero__text">
           <h1 class="hero__text1">
             Gorban<span class="hero__text2">Transportation</span>
@@ -92,38 +95,35 @@
           </p>
           <div class="hero__btns">
             <a class="hero__btn1 btn" href="mailto:gortrans@live.com">
+              <div>gortrans@live.com</div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                fill="none"
                 viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
+                fill="currentColor"
                 class="hero__icon"
               >
                 <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+                  d="M1.5 8.67v8.58a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3V8.67l-8.928 5.493a3 3 0 0 1-3.144 0L1.5 8.67Z"
+                />
+                <path
+                  d="M22.5 6.908V6.75a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3v.158l9.714 5.978a1.5 1.5 0 0 0 1.572 0L22.5 6.908Z"
                 />
               </svg>
-              <div>gortrans@live.com</div>
             </a>
             <a class="hero__btn2 btn" href="tel:+13145047886">
+              <div>314-504-7886</div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                fill="none"
                 viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
+                fill="currentColor"
                 class="hero__icon"
               >
                 <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"
+                  fill-rule="evenodd"
+                  d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z"
+                  clip-rule="evenodd"
                 />
               </svg>
-              <div>314-504-7886</div>
             </a>
           </div>
         </div>
@@ -214,10 +214,6 @@
       </div>
     </div> -->
     <!-- slider ends -->
-
-    <!-- <div class="hero__logo wow">
-      <img class="header__logo" src="/logo.png" alt="Logo image" />
-    </div> -->
 
     <!-- about starts -->
     <a name="about"></a>
