--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header class="header">
       <a class="header__link" href="#home"
         ><div class="header__left">
-          <img class="header__logo" src="/logo.png" alt="Logo image" />
+          <!-- <img class="header__logo" src="/logo.png" alt="Logo image" /> -->
           <div class="header__text">
             <span class="header__text1">gorban</span>
             <span class="header__text2">transportation</span>
@@ -80,8 +80,10 @@
     <div class="hero__container wow">
       <!-- hero starts -->
       <section class="hero main-wrapper">
-        <div class="hero__logo wow">
-          <img class="header__logo" src="/logo.png" alt="Logo image" />
+        <div class="hero__logo-wrapper">
+          <div class="hero__logo">
+            <img class="header__logo" src="/logo.png" alt="Logo image" />
+          </div>
         </div>
         <div class="hero__text">
           <h1 class="hero__text1">
