--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header class="header">
       <a class="header__link" href="#home"
         ><div class="header__left">
-          <!-- <img class="header__logo" src="/logo.png" alt="Logo image" /> -->
+          <img class="header__logo" src="/logo.png" alt="Logo image" />
           <div class="header__text">
             <span class="header__text1">gorban</span>
             <span class="header__text2">transportation</span>
@@ -79,88 +79,7 @@
 
     <div class="hero__container wow">
       <a name="about"></a>
-      <!-- slider starts -->
-      <div class="hero__container-slider wow">
-        <div class="slider__container">
-          <!-- <div
-            class="slider"
-            style="--width: 250px; --height: 205px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.JPG" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img11.jpg" alt="" />
-              </div>
-            </div>
-          </div> -->
 
-          <div
-            class="slider"
-            reverse="true"
-            style="--width: 250px; --height: 230px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img3.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- slider ends -->
       <!-- hero starts -->
       <section class="hero main-wrapper">
         <!-- <div class="hero__logo-wrapper">
@@ -222,34 +141,6 @@
 
     <section class="about">
       <div class="about__card wow">
-        <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
-        <div class="about__info">
-          <div class="about__icon icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-              />
-            </svg>
-          </div>
-          <h2 class="about__text1">
-            Large fleet <br />
-            of auto carriers
-          </h2>
-          <p class="about__text2">
-            We have a large fleet of enclosed and open auto carriers.
-          </p>
-        </div>
-      </div>
-
-      <div class="about__card wow">
         <img class="about__img" src="/public/imgs/img7.JPG" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
@@ -274,6 +165,34 @@
           <p class="about__text2">
             We provide quick and reliable vehicle transportation across the U.S.
             and Canada.
+          </p>
+        </div>
+      </div>
+
+      <div class="about__card wow">
+        <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
+        <div class="about__info">
+          <div class="about__icon icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+              />
+            </svg>
+          </div>
+          <h2 class="about__text1">
+            Large fleet <br />
+            of auto carriers
+          </h2>
+          <p class="about__text2">
+            We have a large fleet of enclosed and open auto carriers.
           </p>
         </div>
       </div>
@@ -337,6 +256,77 @@
       </div>
     </section>
     <!-- about ends -->
+
+    <!-- contact starts -->
+    <section class="contact">
+      <div class="contact__wrapper main-wrapper">
+        <div class="gallery__title main-wrapper">
+          <h3 class="gallery__text1">Contact</h3>
+          <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
+        </div>
+        <p class="contact__text">
+          We are always looking for new <br />
+          opportunities to collaborate. <br />
+          Would you be open to discussing <br />
+          potential ways we could work together?
+        </p>
+        <div class="hero__btns">
+          <a class="hero__btn1 btn" href="mailto:gortrans@live.com">
+            <div>gortrans@live.com</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="hero__icon"
+            >
+              <path
+                d="M1.5 8.67v8.58a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3V8.67l-8.928 5.493a3 3 0 0 1-3.144 0L1.5 8.67Z"
+              />
+              <path
+                d="M22.5 6.908V6.75a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3v.158l9.714 5.978a1.5 1.5 0 0 0 1.572 0L22.5 6.908Z"
+              />
+            </svg>
+          </a>
+
+          <a class="hero__btn2 btn" href="tel:+13145047886">
+            <div>314-504-7886</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="hero__icon"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </a>
+
+          <a
+            class="hero__btn3 btn"
+            href="https://www.google.com/maps?q=14+silvercote+dr,+wentzville,+mo+63385"
+            target="_blank"
+          >
+            <div>Open Maps</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="hero__icon"
+            >
+              <path
+                fill-rule="evenodd"
+                d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- contact ends -->
 
     <div class="gallery__title main-wrapper">
       <h3 class="gallery__text1">Gallery</h3>
@@ -409,47 +399,6 @@
       </a>
     </div> -->
     <!-- gallery ends -->
-
-    <!-- contact starts -->
-    <!-- <div class="form">
-      <h3>Get in touch</h3>
-      <div class="form-group">
-        <input
-          type="text"
-          class="form-control"
-          value=""
-          placeholder="Name"
-          id="contact-name"
-        />
-        <label class="input-field-icon icon-user" for="login-name"></label>
-      </div>
-
-      <div class="form-group">
-        <input
-          type="email"
-          class="form-control"
-          value=""
-          placeholder="Email"
-          id="contact-email"
-        />
-        <label class="input-field-icon icon-email" for="login-email"></label>
-      </div>
-
-      <div class="form-group">
-        <textarea
-          class="form-control"
-          value=""
-          placeholder="Message"
-          id="contact-message"
-          rows="1"
-        ></textarea>
-      </div>
-
-      <button id="contact-send" class="btn btn-primary btn-lg btn-block">
-        Send
-      </button>
-    </div> -->
-    <!-- contact ends -->
 
     <!-- footer starts -->
     <footer></footer>
