--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             <img class="header__logo" src="/logo.png" alt="Logo image" />
           </div>
         </div> -->
+        <div class="hero__logo">
+          <img class="header__logo" src="/logo.png" alt="Logo image" />
+        </div>
         <div class="hero__text">
           <h1 class="hero__text1">
             Gorban<span class="hero__text2">Transportation</span>
@@ -258,6 +261,7 @@
     <!-- about ends -->
 
     <!-- contact starts -->
+
     <section class="contact">
       <div class="contact__wrapper main-wrapper">
         <div class="gallery__title main-wrapper">
@@ -325,6 +329,88 @@
           </a>
         </div>
       </div>
+      <!-- slider starts -->
+      <div class="hero__container-slider main-wrapper wow">
+        <div class="slider__container">
+          <div
+            class="slider"
+            style="--width: 250px; --height: 205px; --quantity: 10"
+          >
+            <div class="slider__list">
+              <div class="slider__item" style="--position: 1">
+                <img src="/public/imgs/img4.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 2">
+                <img src="/public/imgs/img5.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 3">
+                <img src="/public/imgs/img6.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 4">
+                <img src="/public/imgs/img7.JPG" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 5">
+                <img src="/public/imgs/img8.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 6">
+                <img src="/public/imgs/img9.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 7">
+                <img src="/public/imgs/img10.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 8">
+                <img src="/public/imgs/img1.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 9">
+                <img src="/public/imgs/img2.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 10">
+                <img src="/public/imgs/img11.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="slider"
+            reverse="true"
+            style="--width: 250px; --height: 230px; --quantity: 10"
+          >
+            <div class="slider__list">
+              <div class="slider__item" style="--position: 1">
+                <img src="/public/imgs/img10.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 2">
+                <img src="/public/imgs/img9.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 3">
+                <img src="/public/imgs/img8.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 4">
+                <img src="/public/imgs/img7.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 5">
+                <img src="/public/imgs/img6.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 6">
+                <img src="/public/imgs/img5.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 7">
+                <img src="/public/imgs/img4.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 8">
+                <img src="/public/imgs/img3.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 9">
+                <img src="/public/imgs/img2.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 10">
+                <img src="/public/imgs/img1.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- slider ends -->
     </section>
     <!-- contact ends -->
 
