--- a/index.html
+++ b/index.html
@@ -101,23 +101,10 @@
             Improvement and Customer Satisfaction.
           </p>
           <div class="hero__btns">
-            <a class="hero__btn1 btn" href="mailto:gortrans@live.com">
-              <div>gortrans@live.com</div>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="hero__icon"
-              >
-                <path
-                  d="M1.5 8.67v8.58a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3V8.67l-8.928 5.493a3 3 0 0 1-3.144 0L1.5 8.67Z"
-                />
-                <path
-                  d="M22.5 6.908V6.75a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3v.158l9.714 5.978a1.5 1.5 0 0 0 1.572 0L22.5 6.908Z"
-                />
-              </svg>
+            <a class="hero__btn0 btn" href="#contact">
+              <div>Contact Us</div>
             </a>
-            <a class="hero__btn2 btn" href="tel:+13145047886">
+            <!-- <a class="hero__btn2 btn" href="tel:+13145047886">
               <div>314-504-7886</div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -131,7 +118,7 @@
                   clip-rule="evenodd"
                 />
               </svg>
-            </a>
+            </a> -->
           </div>
         </div>
       </section>
@@ -261,7 +248,7 @@
     <!-- about ends -->
 
     <!-- contact starts -->
-
+    <a name="contact"></a>
     <section class="contact">
       <div class="contact__wrapper main-wrapper">
         <div class="gallery__title main-wrapper">
@@ -329,6 +316,7 @@
           </a>
         </div>
       </div>
+
       <!-- slider starts -->
       <div class="hero__container-slider main-wrapper wow">
         <div class="slider__container">
