--- a/index.html
+++ b/index.html
@@ -126,14 +126,48 @@
     </div>
 
     <!-- about starts -->
-    <a name="about"></a>
-    <h3 class="section__title main-wrapper">About</h3>
 
     <section class="about">
-      <div class="about__card wow">
-        <img class="about__img" src="/public/imgs/img7.JPG" alt="" />
+      <a name="about"></a>
+      <h3 class="section__title">About</h3>
+      <div class="about__card one">
+        <div class="about__img">
+          <img src="/public/imgs/img12.jpg" alt="" />
+        </div>
+
         <div class="about__info">
-          <div class="about__icon icon">
+          <div class="about__i1 icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+              />
+            </svg>
+          </div>
+          <h2 class="about__text1">
+            Large fleet <br />
+            of auto carriers
+          </h2>
+          <p class="about__text2">
+            We have a large fleet of enclosed and open auto carriers.
+          </p>
+        </div>
+      </div>
+
+      <div class="about__card two">
+        <div class="about__img">
+          <img src="/public/imgs/img6.jpg" alt="" />
+        </div>
+
+        <div class="about__info">
+          <div class="about__i2 icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -159,38 +193,13 @@
         </div>
       </div>
 
-      <div class="about__card wow">
-        <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
-        <div class="about__info">
-          <div class="about__icon icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-              />
-            </svg>
-          </div>
-          <h2 class="about__text1">
-            Large fleet <br />
-            of auto carriers
-          </h2>
-          <p class="about__text2">
-            We have a large fleet of enclosed and open auto carriers.
-          </p>
+      <div class="about__card three">
+        <div class="about__img">
+          <img src="/public/imgs/img3.jpg" alt="" />
         </div>
-      </div>
 
-      <div class="about__card wow">
-        <img class="about__img" src="/public/imgs/img3.jpg" alt="" />
         <div class="about__info">
-          <div class="about__icon icon">
+          <div class="about__i3 icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -216,10 +225,13 @@
         </div>
       </div>
 
-      <div class="about__card">
-        <img class="about__img" src="/public/imgs/img1.jpg" alt="" />
+      <div class="about__card four">
+        <div class="about__img">
+          <img src="/public/imgs/img1.jpg" alt="" />
+        </div>
+
         <div class="about__info">
-          <div class="about__icon icon">
+          <div class="about__i4 icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
