--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/animate.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
 
     <title>Gorban Transportation</title>
   </head>
@@ -524,6 +528,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
 
     <script>
       new WOW().init();
