--- a/index.html
+++ b/index.html
@@ -501,51 +501,106 @@
       <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
     </div>
 
-    <div class="m-p-g">
+    <div class="m-p-g main-wrapper">
       <div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
         <img
-          src="http://unsplash.it/600/400?image=940"
-          data-full="http://unsplash.it/1200/800?image=940"
+          src="./public/gallery/1.jpeg"
+          data-full="./public/gallery/1.jpeg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/640/450?image=906"
-          data-full="http://unsplash.it/1280/900?image=906"
+          src="./public/gallery/2.JPEG"
+          data-full="./public/gallery/2.JPEG"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/550/420?image=885"
-          data-full="http://unsplash.it/1100/840?image=885"
+          src="./public/gallery/3.JPG"
+          data-full="./public/gallery/3.JPG"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/650/450?image=823"
-          data-full="http://unsplash.it/1300/900?image=823"
+          src="./public/gallery/4.jpg"
+          data-full="./public/gallery/4.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/600/350?image=815"
-          data-full="http://unsplash.it/1200/700?image=815"
+          src="./public/gallery/5.jpg"
+          data-full="./public/gallery/5.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/560/500?image=677"
-          data-full="http://unsplash.it/1120/1000?image=677"
+          src="./public/gallery/6.jpg"
+          data-full="./public/gallery/6.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/670/410?image=401"
-          data-full="http://unsplash.it/1340/820?image=401"
+          src="./public/gallery/7.jpg"
+          data-full="./public/gallery/7.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/620/340?image=623"
-          data-full="http://unsplash.it/1240/680?image=623"
+          src="./public/gallery/8.jpg"
+          data-full="./public/gallery/8.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="http://unsplash.it/790/390?image=339"
-          data-full="http://unsplash.it/1580/780?image=339"
+          src="./public/gallery/9.jpg"
+          data-full="./public/gallery/9.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/10.jpg"
+          data-full="./public/gallery/10.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/11.jpg"
+          data-full="./public/gallery/11.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/12.jpg"
+          data-full="./public/gallery/12.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/13.jpg"
+          data-full="./public/gallery/13.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/14.jpg"
+          data-full="./public/gallery/14.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/15.jpg"
+          data-full="./public/gallery/15.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/16.jpg"
+          data-full="./public/gallery/16.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/17.jpg"
+          data-full="./public/gallery/17.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/18.jpg"
+          data-full="./public/gallery/18.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/19.jpg"
+          data-full="./public/gallery/19.jpg"
+          class="m-p-g__thumbs-img"
+        />
+        <img
+          src="./public/gallery/20.jpg"
+          data-full="./public/gallery/20.jpg"
           class="m-p-g__thumbs-img"
         />
       </div>
@@ -626,6 +681,5 @@
         lastScrollY = window.scrollY;
       });
     </script>
-    -->
   </body>
 </html>
