--- a/index.html
+++ b/index.html
@@ -504,31 +504,31 @@
     <div class="m-p-g">
       <div class="m-p-g__thumbs" data-google-image-layout data-max-height="200">
         <img
-          src="/public/_1.jpeg"
-          data-full="/public/_1.jpeg"
+          src="./public/_1.jpeg"
+          data-full="./public/_1.jpeg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="/public/_2.JPEG"
-          data-full="/public/_2.JPEG"
+          src="./public/_2.JPEG"
+          data-full="./public/_2.JPEG"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="/public/_3.JPG"
-          data-full="/public/_3.JPG"
+          src="./public/_3.JPG"
+          data-full="./public/_3.JPG"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="/public/_4.jpg"
-          data-full="/public/_4.jpg"
+          src="./public/_4.jpg"
+          data-full="./public/_4.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="/public/_5.jpg"
-          data-full="/public/_5.jpg"
+          src="./public/_5.jpg"
+          data-full="./public/_5.jpg"
           class="m-p-g__thumbs-img"
         />
-        <img
+        <!-- <img
           src="./public/gallery/6.jpg"
           data-full="./public/gallery/6.jpg"
           class="m-p-g__thumbs-img"
@@ -602,7 +602,7 @@
           src="./public/gallery/20.jpg"
           data-full="./public/gallery/20.jpg"
           class="m-p-g__thumbs-img"
-        />
+        /> -->
       </div>
 
       <div class="m-p-g__fullscreen"></div>
