--- a/index.html
+++ b/index.html
@@ -504,21 +504,21 @@
     <div class="m-p-g">
       <div class="m-p-g__thumbs" data-google-image-layout data-max-height="200">
         <img
-          src="./public/_1.jpeg"
-          data-full="./public/_1.jpeg"
+          src="./public/img1.jpg"
+          data-full="./public/img1.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="./public/_2.JPEG"
-          data-full="./public/_2.JPEG"
+          src="./public/img2.jpg"
+          data-full="./public/img2.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="./public/_3.JPG"
-          data-full="./public/_3.JPG"
+          src="./public/img3.jpg"
+          data-full="./public/img3.jpg"
           class="m-p-g__thumbs-img"
         />
-        <img
+        <!-- <img
           src="./public/_4.jpg"
           data-full="./public/_4.jpg"
           class="m-p-g__thumbs-img"
@@ -527,7 +527,7 @@
           src="./public/_5.jpg"
           data-full="./public/_5.jpg"
           class="m-p-g__thumbs-img"
-        />
+        /> -->
         <!-- <img
           src="./public/gallery/6.jpg"
           data-full="./public/gallery/6.jpg"
