--- a/index.html
+++ b/index.html
@@ -504,18 +504,18 @@
     <div class="m-p-g">
       <div class="m-p-g__thumbs" data-google-image-layout data-max-height="200">
         <img
-          src="./public/img1.jpg"
-          data-full="./public/img1.jpg"
+          src="/public/img1.jpg"
+          data-full="/public/img1.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="./public/img2.jpg"
-          data-full="./public/img2.jpg"
+          src="/public/img2.jpg"
+          data-full="/public/img2.jpg"
           class="m-p-g__thumbs-img"
         />
         <img
-          src="./public/img3.jpg"
-          data-full="./public/img3.jpg"
+          src="/public/img3.jpg"
+          data-full="/public/img3.jpg"
           class="m-p-g__thumbs-img"
         />
         <!-- <img
